apps/healthview-ecgprediction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecgprediction-ingress
  namespace: ecgprediction
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ecgprediction.mlthrive.com
        - api.ecgprediction.mlthrive.com
      secretName: ecgprediction-mlthrive-tls

  rules:
    - host: ecgprediction.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecgprediction-frontend-service
                port:
                  number: 80

    - host: api.ecgprediction.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecgprediction-backend-service
                port:
                  number: 8000
